--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,9 +1,8 @@
-<h1>Stupid Coaching</h1>
-<p>Ask your coach anything</p>
-
-<form action="/answer">
-  <input type="text" name="question">
-  <input type="submit" value="Ask!">
+<div class="form-style-8">
+  <h2>Stupid Coaching</h2>
+  <p>Type your question below...</p>
+  <form action="/answer" class="form-style-8">
+  <input type="text" name="question" id="user_input">
+  <input type="submit" value="Ask!" id="btn">
 </form>
-
-
+</div>
